--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,6 +1,6 @@
 <h1>メモアプリ</h1>
 
-<form action="/edit/<%= "#{@txt_name}" %>" method="post">
+<form action="/edit-<%= "#{@txt_name}" %>" method="post">
   <input type="hidden" name="_method" value="patch">
   <p></p>
   <input type="text" name="edit_title" value="<%= "#{@memo_date[0]}" %>">
