change html input to textarea

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -5,7 +5,7 @@
   <p></p>
   <input type="text" name="edit_title" value="<%= "#{@memo_date[0]}" %>">
   <p></p>
-  <input type="text" name="edit_content" value="<%= "#{@memo_date[1]}" %>">
+  <textarea name="edit_content"><%= "#{@memo_date[1]}" %></textarea>
   <p></p>
   <button type="submit">変更</button>
 </form>
