--- a/views/create.erb
+++ b/views/create.erb
@@ -4,7 +4,7 @@
   <p></p>
   <input type="text" name="memo_title">
   <p></p>
-  <input type="text" name="memo_content">
+  <textarea name="memo_content"></textarea>
   <p></p>
   <button type="submit">保存</button>
 </form>
