--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,31 +4,82 @@ body {
 }
 
 .container {
-    width: 400px;
+    width: 500px;
     margin: 20px auto;
 }
 
 h1 {
-    font-size: 18px;
+    font-size: 1.5em;
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+h2 {
+    font-size: 1em;
+    padding-bottom: 10px;
+    color: #222;
+}
+
+.top {
+    display: flex;
+    flex-direction: column;
 }
 
 input[type="text"] {
-    padding: 3px;
-    border-style: solid; 
+    border:0;
+    padding:10px;
+    font-size:1.3em;
+    font-family:Arial, sans-serif;
+    color: #555;
+    border:solid 1px #ccc;
+    margin:0 0 20px;
+    width:300px;
 }
 
-.memo_title {
-    padding: 0.5em 1em;
-    margin: 2em 0;
-    font-weight: bold;
-    color: #6091d3;/*文字色*/
-    background: #FFF;
-    border: solid 3px #6091d3;/*線*/
-    border-radius: 10px;/*角の丸み*/
+.memo_content {
+    border: solid 1px #ccc;
+    margin: 0 0 20px;
+    color: #555;
+    font-size:1em;
 }
-.memo_title p {
-    margin: 0; 
-    padding: 0;
+
+a.btn-flat-border, li a {
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+}
+
+.memo_titles {
+    margin-bottom: 20px;
+    padding: 5px;
+    list-style: none;
+    border-bottom: 1px solid;
+}
+
+.btn-flat-border {
+    display: inline-block;
+    padding: 0.3em 5em;
+    text-decoration: none;
+    color: #67c5ff;
+    border: solid 2px #67c5ff;
+    border-radius: 3px;
+    transition: .4s;
+    margin: 0 0 20px;
+}
+
+.btn-flat-border:hover {
+  background: #67c5ff;
+  color: white;
+}
+
+.title_view {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+
+.content_view {
+    font-size: 1em;
+    margin-bottom: 20px;
 }
