--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
   <meta charaset="utf-8">
   <title><%= @title %></title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/ress.css">
 </head>
 <body>
   <div class="container">
