--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,13 +2,14 @@
 <html lang="ja">
 <head>
   <meta charaset="utf-8">
-  <title><%= @title %></title>
+  <title>My memo</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/ress.css">
 </head>
 <body>
   <div class="container">
-  <h1><%= yield %></h1>
+  <h1>メモアプリ</h1>
+  <%= yield %>
   </div>
 </body>
 </html>
