--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,12 @@
 <div class="top">
   <ul style="padding: 0px;">
     <% @memo.sort.each do |txt| %>
-    <li class="memo_titles"><a href="/show-<%= "#{txt}" %>"><%= Rack::Utils.escape_html(txt.gsub(/\.txt/, "")) %></a></li>
-    <% end %>
+      <li class="memo_titles">
+        <a href="/show-<%= "#{txt}" %>">
+          <%= Rack::Utils.escape_html(txt.gsub(/\.txt/, "")) %>
+        </a>
+      </li>
+      <% end %>
   </ul>
   <a href="/create" class="btn-flat-border">メモを追加</a>
 </div>
