--- a/views/save.erb
+++ b/views/save.erb
@@ -1,8 +1,12 @@
 <label>保存しました</label>
 <h2>タイトル</h2>
-<p class="title_view"><%= @memo_title %></p>
+<p class="title_view">
+  <%= @memo_title %>
+</p>
 <h2>本文</h2>
-<p class="content_view" style="font-size: 1em; margin-bottom: 20px;"><%= @memo_content %></p>
+<p class="content_view" style="font-size: 1em; margin-bottom: 20px;">
+  <%= @memo_content %>
+</p>
 <form action="/" method="get">
   <input class="btn-flat-border" type="submit" value="戻る">
 </form>
