--- a/views/save.erb
+++ b/views/save.erb
@@ -7,6 +7,6 @@
 <p class="content_view" style="font-size: 1em; margin-bottom: 20px;">
   <%= @memo_content %>
 </p>
-<form action="/" method="get">
+<form action="/memo" method="get">
   <input class="btn-flat-border" type="submit" value="戻る">
 </form>
