--- a/views/create.erb
+++ b/views/create.erb
@@ -1,12 +1,12 @@
 <div class="top">
   <h2>タイトルを入力</h2>
-  <form action="/create" method="post">
+  <form action="/memo/new" method="post">
     <input type="text" name="memo_title" required>
     <h2>本文を入力</h2>
     <textarea class="memo_content" rows="10" cols="50" name="memo_content"></textarea>
     <button class="btn-flat-border" type="submit">保存</button>
   </form>
-  <form action="/" method="get">
+  <form action="/memo" method="get">
     <input class="btn-flat-border" type="submit" value="戻る">
   </form>
 </div>
