--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,4 +1,4 @@
-<form action="/edit-<%= "#{@txt_name}" %>" method="post">
+<form action="/memo/custom/<%= "#{@txt_name}" %>" method="post">
   <input type="hidden" name="_method" value="patch">
   <p></p>
   <h2>タイトルを入力</h2>
