--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,8 @@
 <head>
   <meta charaset="utf-8">
   <title>My memo</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/ress.css">
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/ress.css" />
 </head>
 <body>
   <div class="container">
