--- a/views/create.erb
+++ b/views/create.erb
@@ -1,5 +1,6 @@
 <div class="top">
   <h2>タイトルを入力</h2>
+  <label>(※タイトルが重複していると保存出来ません。)</label>
   <form action="/memo/new" method="post">
     <input type="text" name="memo_title" required>
     <h2>本文を入力</h2>
