--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,9 @@
 <div class="top">
   <ul style="padding: 0px;">
-    <% @memo.sort.each do |txt| %>
+    <% @result.each do |tuple| %>
       <li class="memo_titles">
-        <a href="/memo/<%= "#{txt}" %>">
-          <%= Rack::Utils.escape_html(txt.gsub(/\.txt/, "")) %>
+        <a href="/memo/<%= tuple['title'] %>">
+          <%= Rack::Utils.escape_html(tuple['title']) %>
         </a>
       </li>
       <% end %>
