--- a/views/save.erb
+++ b/views/save.erb
@@ -5,7 +5,7 @@
 </p>
 <h2>本文</h2>
 <p class="content_view" style="font-size: 1em; margin-bottom: 20px;">
-  <%= @memo_content %>
+  <%= @memo_body %>
 </p>
 <form action="/memo" method="get">
   <input class="btn-flat-border" type="submit" value="戻る">
