--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,7 +38,7 @@ body {
     width: 300px;
   }
   
-  .memo_content {
+  .memo_body {
     border: solid 1px #ccc;
     margin: 0 0 20px;
     color: #555;
