--- a/views/create.erb
+++ b/views/create.erb
@@ -4,7 +4,7 @@
   <form action="/memo" method="post">
     <input type="text" name="memo_title" required>
     <h2>本文を入力</h2>
-    <textarea class="memo_content" rows="10" cols="50" name="memo_content"></textarea>
+    <textarea class="memo_body" rows="10" cols="50" name="memo_body"></textarea>
     <button class="btn-flat-border" type="submit">保存</button>
   </form>
   <form action="/memo" method="get">
