--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,10 +1,11 @@
-<form action="/memo/<%= "#{@txt_name}" %>" method="post">
+<% @result.each do |tuple| %>
+<form action="/memo/<%= tuple['title'] %>" method="post">
   <input type="hidden" name="_method" value="patch">
-  <p></p>
   <h2>タイトルを入力</h2>
-  <input type="text" name="edit_title" value="<%= Rack::Utils.escape_html("#{@memo_data[0]}") %>" required>
+  <input type="text" name="edit_title" value="<%= Rack::Utils.escape_html(tuple['title']) %>" required>
   <h2>本文を入力</h2>
-  <textarea class="memo_content" name="edit_content"><%= Rack::Utils.escape_html("#{@memo_data[1]}") %></textarea>
+  <textarea class="memo_body" name="edit_body"><%= Rack::Utils.escape_html(tuple['body']) %></textarea>
   <p></p>
   <button class="btn-flat-border" type="submit">変更</button>
 </form>
+<% end %>
