change variable @result to @single_memo

--- a/views/show.erb
+++ b/views/show.erb
@@ -1,17 +1,17 @@
-<% @result.each do |tuple| %>
+<% @single_memo.each do |memo| %>
 <h2>タイトル</h2>
 <p class="title_view">
-  <%= tuple['title'] %>
+  <%= memo['title'] %>
 </p>
 <h2>本文</h2>
 <p class="content_view">
-  <%= tuple['body'] %>
+  <%= memo['body'] %>
 </p>
-<form action="/memo/custom/<%= tuple['title'] %>" method="get">
+<form action="/memo/custom/<%= memo['title'] %>" method="get">
   <input class="btn-flat-border" type="submit" value="変更">
 </form>
 <p></p>
-<form action="/memo/<%= tuple['title'] %>" method="post">
+<form action="/memo/<%= memo['title'] %>" method="post">
   <input type="hidden" name="_method" value="delete">
   <input class="btn-flat-border" type="submit" value="削除">
 </form>
