change variable @memo_title_all to @memo_titles

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <div class="top">
   <ul style="padding: 0px;">
-    <% @memo_title_all.each do |title| %>
+    <% @memo_titles.each do |title| %>
       <li class="memo_titles">
         <a href="/memo/<%= title['title'] %>">
           <%= Rack::Utils.escape_html(title['title']) %>
